@@ -9,8 +9,11 @@
 // -1 to prevent downloading of attachments as zip
 $config['zipdownload_attachments'] = 1;
 
-// Zip selection of messages
-$config['zipdownload_selection'] = false;
+// Zip selection of mail messages
+// This option enables downloading of multiple messages as one zip archive.
+// The number or string value specifies maximum total size of all messages
+// in the archive (not the size of the archive itself).
+$config['zipdownload_selection'] = '50MB';
 
 // Charset to use for filenames inside the zip
 $config['zipdownload_charset'] = 'ISO-8859-1';
